--- a/weather.html
+++ b/weather.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Local Weather</title>
         <link rel="stylesheet" href="weather.css">
-        <script src="weather.js"></script>
+        <script async src="weather.js"></script>
     </head>
     <body>
         <div class="container-fluid text-center" id="background">
